Added HTML files

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,2 @@
 
-ML_cache/html/__packages
-
-ML_cache/html/unnamed-chunk-1_294124fb0800c9e86d6b538cf8e4303b.RData
-
-ML_cache/html/unnamed-chunk-1_294124fb0800c9e86d6b538cf8e4303b.rdb
-
-ML_cache/html/unnamed-chunk-1_294124fb0800c9e86d6b538cf8e4303b.rdx
-
-ML_cache/html/unnamed-chunk-1_a95fc4ae32e13e52f27d08c1e411d586.RData
-
-ML_cache/html/unnamed-chunk-1_a95fc4ae32e13e52f27d08c1e411d586.rdb
-
-ML_cache/html/unnamed-chunk-1_a95fc4ae32e13e52f27d08c1e411d586.rdx
-
-ML_files/figure-html/unnamed-chunk-2-1.png
-
-ML_files/figure-html/unnamed-chunk-4-1.png
-
-ML.html
+ML_cache/
